About page started

--- a/src/nunjucks/pages/index.html
+++ b/src/nunjucks/pages/index.html
@@ -8,7 +8,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col white-text">
-				<img class="logo" src="/svg/donut-logo-vertical.svg">
+				<a href="/">
+				  <img class="logo" src="/svg/donut-logo-vertical.svg">
+        </a>
 				<h1>A sweet, daily email that delivers just the facts and a 360 view on the news of the day.</h1>
 				<div class="ctas">
 	
@@ -35,12 +37,6 @@
 							<div class="_clear-element">
 							</div>
 						</div>
-						{# <div class="_form-thank-you">
-							<div class="close-btn"></div>
-							<div class="lottie-check-mark"></div>
-							<h1>Thanks for subscribing!</h1>
-							<p>You are now part of the DONUT revolution.  Keep an eye out for us in your inbox.</p>
-						</div> #}
 					</form>
 
 					<script type="text/javascript">
