Finalized scss and nunjucks components restructure

--- a/src/nunjucks/pages/ambassadors-refer-a-friend.html
+++ b/src/nunjucks/pages/ambassadors-refer-a-friend.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-{% include "partials/header.html" %}
+{% include "sections/header.html" %}
 
 <section class="ambassador-refer-hero">
   <div class="container">
@@ -46,11 +46,11 @@
         <h5>Your Referral Count:</h5>
 
         <div data-vl-widget="referralCountWidget" class="referral-count-widget"></div>
-        
+
         <div id="milestone-message">
           <h3>Refer friends and win the prizes below!</h3>
         </div>
-        
+
 
         <div data-vl-widget="milestoneWidget" class="milestone-widget"></div>
 
@@ -61,10 +61,10 @@
 </section>
 
 
-<script>!function(){var a=window.VL=window.VL||{};return a.instances=a.instances||{},a.invoked?void(window.console&&console.error&&console.error("VL snippet loaded twice.")):(a.invoked=!0,void(a.load=function(b,c,d){var e={};e.publicToken=b,e.config=c||{};var f=document.createElement("script");f.type="text/javascript",f.id="vrlps-js",f.defer=!0,f.src="https://app.viral-loops.com/client/vl/vl.min.js";var g=document.getElementsByTagName("script")[0];return g.parentNode.insertBefore(f,g),f.onload=function(){;a.setup(e),a.instances[b]=e},e.identify=e.identify||function(a,b){e.afterLoad={identify:{userData:a,cb:b}}},e.pendingEvents=[],e.track=e.track||function(a,b){e.pendingEvents.push({event:a,cb:b})},e.pendingHooks=[],e.addHook=e.addHook||function(a,b){e.pendingHooks.push({name:a,cb:b})},e.$=e.$||function(a){e.pendingHooks.push({name:"ready",cb:a})},e}))}();var campaign=VL.load("hOSS8PYC03GzKkHso8ORt9JX5ic",{autoLoadWidgets:!0});</script>
+<script>!function () { var a = window.VL = window.VL || {}; return a.instances = a.instances || {}, a.invoked ? void (window.console && console.error && console.error("VL snippet loaded twice.")) : (a.invoked = !0, void (a.load = function (b, c, d) { var e = {}; e.publicToken = b, e.config = c || {}; var f = document.createElement("script"); f.type = "text/javascript", f.id = "vrlps-js", f.defer = !0, f.src = "https://app.viral-loops.com/client/vl/vl.min.js"; var g = document.getElementsByTagName("script")[0]; return g.parentNode.insertBefore(f, g), f.onload = function () { ; a.setup(e), a.instances[b] = e }, e.identify = e.identify || function (a, b) { e.afterLoad = { identify: { userData: a, cb: b } } }, e.pendingEvents = [], e.track = e.track || function (a, b) { e.pendingEvents.push({ event: a, cb: b }) }, e.pendingHooks = [], e.addHook = e.addHook || function (a, b) { e.pendingHooks.push({ name: a, cb: b }) }, e.$ = e.$ || function (a) { e.pendingHooks.push({ name: "ready", cb: a }) }, e })) }(); var campaign = VL.load("hOSS8PYC03GzKkHso8ORt9JX5ic", { autoLoadWidgets: !0 });</script>
 
 
 
-{% include "partials/footer.html" %}
+{% include "sections/footer.html" %}
 
 {% endblock %}
