--- a/src/nunjucks/pages/index.html
+++ b/src/nunjucks/pages/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% include "partials/header.html" %}
+{% include "sections/header.html" %}
 
 <section class="homepage-hero">
 	<div class="container">
@@ -137,9 +137,9 @@
 	</div>
 </section>
 
-{% include "partials/footer-subscribe.html" %}
+{% include "sections/footer-subscribe.html" %}
 
 
-{% include "partials/footer.html" %}
+{% include "sections/footer.html" %}
 
 {% endblock %}
