--- a/src/nunjucks/pages/rating-system.html
+++ b/src/nunjucks/pages/rating-system.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 
-{% include "partials/header.html" %}
+{% include "sections/header.html" %}
 
 <section class="skyscraper dark">
-	<div class="skyscraper-container">
-    
+  <div class="skyscraper-container">
+
     <h1 class="large">the DONUT Rating System</h1>
     <p>It seems these days, news sources are dedicated to pushing a certain perspective over others, sometimes making it hard to figure out what’s true and what’s spin. <a href="https://en.wikipedia.org/wiki/Walter_Cronkite" target="_blank">Walter Cronkite</a> once said, “In seeking truth you have to get both sides of a story” and we utilize a rating system to help provide you with just that.</p>
     <div class="spacer-40"></div>
@@ -30,6 +30,6 @@
 </section>
 
 
-{% include "partials/footer.html" %}
-	
+{% include "sections/footer.html" %}
+
 {% endblock %}
