--- a/src/nunjucks/pages/about.html
+++ b/src/nunjucks/pages/about.html
@@ -1,95 +1,99 @@
 {% set page = "about" %}
 {% extends "layout.nunjucks" %}
 
+
+{% import "../templates/elements/frosting-contour.html" as 'frosting_contour' %}
+
 {% block content %}
 
-{% include "partials/header.html" %}
+{% include "sections/header.html" %}
 
-<section class="about-hero padding-bottom-100">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-10 offset-lg-1 white-text">
-        <a href="{{root_url}}{{pages.home.slug}}">
-				  <img class="logo" src="{{root_url}}/svg/donut-logo-vertical.svg">
-        </a>
-        <div class="about-excerpt">
-          <p class="large">With the country so divided, our dream is to transform news consumption and civic engagement by bringing people together instead of driving them apart - want to know our ingredients?</p>
-        </div>
-			</div>
-		</div>
-	</div>
+<section class="about-main relative bkg--soft-black padding-100">
+  <div class="skyscraper-container">
+
+    <div class="col-full">
+      <h1 class="large">Join us on our quest to transform news consumption.</h1>
+      <div class="spacer-60"></div>
+
+      <p class="large">Forget secret recipes and hidden flavors. We know that fully understanding what goes into the DONUT makes it even sweeter. In fact, we don't even care if you share... it's encouraged.</p>
+      <div class="spacer-60"></div>
+
+      <h2>The Problem</h2>
+      <ul>
+        <li>Sensationalist and clickbait journalism</li>
+        <li>News outlets that only highlight one side of the story (bias/misinformation)</li>
+        <li>The anxiety & anger that comes with being ‘informed’</li>
+      </ul>
+      <div class="spacer-60"></div>
+
+      <h2>Our Solution</h2>
+      <ul>
+        <li>No sensationalist or clickbait journalism. Facts only.</li>
+        <li>We always present multiple sides of a story.</li>
+        <li>Good things happen in the world every day. We promise to consistently find and highlight them.</li>
+      </ul>
+      <div class="spacer-60"></div>
+
+      <h2>Our Beliefs</h2>
+      <ul>
+        <li>Accurate information about the world around us is a human right. Our news will always be 100% free.</li>
+        <li>All viewpoints deserve the chance to be heard. Sunlight is the best disinfectant.</li>
+        <li>The world is far from perfect, but it only continues to get better and better. And that should be recognized and celebrated.</li>
+      </ul>
+    </div>
+  </div>
+
+  {{ frosting_contour.build() }}
 </section>
 
-<section class="about-ingredients padding-100">
-  <div class="container">
-		<div class="row">
-			<div class="col-lg-10 offset-lg-1 white-text">
-				<div class="ingredients-excerpt margin-bottom-100">
-          <h1>the DONUT Ingredients</h1>
-          <p class="large">Forget secret recipes and hidden flavors. We know that fully understanding what goes into the DONUT makes it even sweeter. In fact, we don't even care if you share... it's encouraged.</p>
-        </div>
-			</div>
-		</div>
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="ingredient">
-          <img src="{{root_url}}/svg/icon-lightbulb.svg">
-          <div class="ingredient-content white-text">
-            <h3>Fact-based News</h3>
-            <p>All the news we share or summarize in the DONUT is fact based. What is a "fact"? It's something verifiable and/or corroborated by unbiased experts. We do the work to ensure the information we share with you is true, and we serve it up on its own, no extra flavor or spice.</p>
-          </div>
+<section class="padding-100">
+  <div class="skyscraper-container">
+    <div class="col-full">
+      <h1 class="large">DONUT FAQs</h1>
+
+      <div class="accordion" data-expanded='false'>
+        <h4 class="question">What’s DONUT stand for? How’d you come up with it?</h4>
+        <div class="answer">
+          <p>It was a dark and stormy night… nah, just kidding. We wanted something playful, meaningful, unique, and morning-oriented. Inspiration struck one day - we listened - and the Dose Of News Useful Today was born.</p>
         </div>
       </div>
 
-      <div class="col-lg-6">
-        <div class="ingredient">
-          <img src="{{root_url}}/svg/icon-opinion-free.svg">
-          <div class="ingredient-content white-text">
-            <h3>Opinion-free information</h3>
-            <p>At the DONUT we believe an opinion should be yours, not ours. That means when we share info with you, we withhold our judgement, so you can decide how you feel about something.</p>
-          </div>
+      <div class="accordion" data-expanded='false'>
+        <h4 class="question">What’s DONUT stand for? How’d you come up with it?</h4>
+        <div class="answer">
+          <p>It’s nearly impossible to be completely unbiased & impartial when it comes to choosing the content. That being said, we have several safeguards in place to ensure our selection is systematic - not subjective - and as close to impartial as possible.</p>
+          <ol>
+            <li>We have a system that scours 100+ publications and various social media sources to extract the most discussed & influential topics of the day.</li>
+
+            <li>We aggregate these topics in a centralized place, after which our content team begins their daily debate to determine the stories that make it into the newsletter. Our team ranges from hard-line progressive to hard-line conservative, and we have intensive, rational, civil, logical discussions to ensure there’s a topic consensus before moving forward with stories. We practice what we preach!</li>
+
+            <li>Once the topic selections are finalized, our journalists write their respective stories. There is a strong emphasis on factual reporting with limited adjectives, and our content team pulls directly from primary source documents, if possible. When primary sources are NOT available, our team cross-references 4+ sources looking for "intersection points." Intersection points occur when news outlets with different biases (i.e, MSNBC & Fox News) include the same information in their coverage of a particular topic or event. These intersection points are incorporated into the DONUT's reporting.</li>
+
+            <li>Once the stories are written, we have a 3-step editorial process in place for each piece of content to ensure our information is accurate and engaging.</li>
+          </ol>
         </div>
       </div>
 
-      <div class="col-lg-6">
-        <div class="ingredient">
-          <img src="{{root_url}}/svg/icon-360.svg">
-          <div class="ingredient-content white-text">
-            <h3>Equal Representation on the Issues</h3>
-            <p>Part of the fun of forming your own opinion is it's probably going to be different than the person sitting next to you. And the person sitting next to them. At the DONUT we believe having access to multiple points of view about an issue is what allows us to be more informed overall. We promise to always share access to all viewpoints when summarizing a popular news topic that might be polarizing.</p>
-          </div>
+      <div class="accordion" data-expanded='false'>
+        <h4 class="question">What do you do with my email address after I subscribe?</h4>
+        <div class="answer">
+          <p>We do not share your information with any third party. We do not sell your information to any third party.</p>
         </div>
       </div>
 
-      <div class="col-lg-6">
-        <div class="ingredient">
-          <img src="{{root_url}}/svg/icon-positivity.svg">
-          <div class="ingredient-content white-text">
-            <h3>Relentless Positivity</h3>
-            <p>Optimism is the foundation to the recipe here at the DONUT. We believe that a dose of positivity is important for everyone's well being, so we scour the internet to find the news that makes us feel the feels every single day. The BEST part? There's no shortage of these stories to share, and we feel confident that one day... there might just be a piece involving puppies.</p>
-          </div>
+      <div class="accordion" data-expanded='false'>
+        <h4 class="question">We heard your t-shirts and sweatshirts are made of the softest material on the planet. Is this true?</h4>
+        <div class="answer">
+          <p>We don’t like to brag, but… yes. Don’t believe us? <a href="https://mydonut.co/merch" target="_blank">Check ‘em out for yourself</a>. 😉</p>
         </div>
       </div>
-      
+
     </div>
   </div>
 </section>
 
+{% include "sections/footer-subscribe.html" %}
 
-{% include "partials/footer-subscribe.html" %}
+{% include "sections/footer.html" %}
 
-
-<!-- <div class="_form-thank-you">
-	<div class="close-btn"></div>
-	<div class="lottie-check-mark"></div>
-	<h1>Thanks for subscribing!</h1>
-	<p>You are now part of the DONUT revolution.  Keep an eye out for us in your inbox.</p>
-</div> -->
-
-
-
-
-
-{% include "partials/footer.html" %}
-	
 {% endblock %}
