Changed header to use new Mega Menu for MDE

--- a/src/nunjucks/pages/about.html
+++ b/src/nunjucks/pages/about.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="accordion" data-expanded='false'>
-        <h4 class="question">What’s DONUT stand for? How’d you come up with it?</h4>
+        <h4 class="question">What’s the creation process for the newsletter? How do you select content and write about it in an impartial manner?</h4>
         <div class="answer">
           <p>It’s nearly impossible to be completely unbiased & impartial when it comes to choosing the content. That being said, we have several safeguards in place to ensure our selection is systematic - not subjective - and as close to impartial as possible.</p>
           <ol>
